--- a/css/beneficiosStyle.css
+++ b/css/beneficiosStyle.css
@@ -3,26 +3,15 @@ body {
     margin: 0;
     padding: 0;
     background-color: #ffffff; /* Blanco */
-    color: #333333; /* Texto principal */
+    color: #333333; 
 }
 
-.header {
-    display: flex;
-    align-items: center;
-    background-color: #4f4aa6;
-}
-  
-.header-title {
-    margin-left: 100px;
-    margin-right: 100px;
+header {
+    background-color: #4f4aa6; /* Lila */
+    padding: 20px;
+    text-align: center;
     color: aliceblue;
-}
-  
-.header-image {
-    width: 250px; 
-    height: auto; 
-    object-fit: cover;
-    margin: 0; 
+    font-size: 20px;
 }
 
 nav {
@@ -48,4 +37,30 @@ nav ul li a {
     font-size: 18px;
 }
 
+.container {
+    display: flex;
+  }
+  
+.column {
+    flex: 1; /*Indica que debe ocupar todo el espacio*/
+}
+  
+.column img {
+    width: 100%;
+    height: auto;
+}
+  
+.column h2 {
+    margin-left: 30px;
+    color: #333;
+    font-size: 30px;
+}
+  
+.column p {
+    margin-left: 30px;
+    margin-right: 30px;
+    text-align: justify;
+    color: #666;
+    font-size: 18px;
+}
   
