--- a/css/style1.css
+++ b/css/style1.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #4f4aa6; /* Lila */
+    background-color: #8a4dff; /* Lila */
     padding: 20px;
     text-align: center;
 }
