--- a/css/style1.css
+++ b/css/style1.css
@@ -68,3 +68,37 @@ footer {
 footer p {
     margin: 0;
 }
+
+/* Estilos personalizados para el video */
+section#explicacion iframe {
+    width: 100%;
+    height: 450px;
+    border: none;
+    margin-bottom: 30px;
+}
+
+/* Estilos para hacer el contenido más compacto */
+ul {
+    padding-left: 20px;
+}
+
+ul li {
+    margin-bottom: 10px;
+}
+
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
+}
+
+.image-container img {
+    width: 150px;
+    height: 150px;
+    margin: 10px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
