--- a/css/beneficiosStyle.css
+++ b/css/beneficiosStyle.css
@@ -66,11 +66,11 @@ nav ul li a {
   
 #robots h2 {
     text-align: center;
-    text-decoration: underline;
-    text-decoration-color: #2ed573;
     color: black;
     font-size: 30px;
     margin-top: 50px;
+    border: 5px solid #4f4aa6;
+    margin-top: 10px;
 }
 
 #robots p {
@@ -81,7 +81,6 @@ nav ul li a {
 
 .container2 {
     display: flex;
-    border: 5px solid #2ed573;
   }
   
 .column2 {
@@ -91,6 +90,9 @@ nav ul li a {
 
 .column2 h3 {
     margin-left: 20px;
+    text-decoration: underline;
+    text-decoration-color: #2ed573;
+    text-decoration-thickness: 2px;
 }
   
 .column2 img {
@@ -102,8 +104,6 @@ nav ul li a {
 
 .container3 {
     display: flex;
-    border: 5px solid #4f4aa6;
-    margin-top: 10px;
   }
   
 .column3 {
@@ -113,6 +113,9 @@ nav ul li a {
 
 .column3 h3 {
     margin-left: 20px;
+    text-decoration: underline;
+    text-decoration-color: #2ed573;
+    text-decoration-thickness: 2px;
 }
  
 .column3 iframe {
@@ -121,8 +124,6 @@ nav ul li a {
 
 .container4 {
     display: flex;
-    border: 5px solid #2ed573;
-    margin-top: 10px;
   }
   
 .column4 {
@@ -132,6 +133,9 @@ nav ul li a {
 
 .column4 h3 {
     margin-left: 20px;
+    text-decoration: underline;
+    text-decoration-color: #2ed573;
+    text-decoration-thickness: 2px;
 }
   
 .column4 img {
@@ -143,27 +147,58 @@ nav ul li a {
 
 #asistentes h2 {
     text-align: center;
-    text-decoration: underline;
-    text-decoration-color: #2ed573;
     color: black;
     font-size: 30px;
     margin-top: 50px;
+    border: 5px solid #4f4aa6;
+    margin-top: 10px;
+}
+
+#asistentes p {
+    text-align: justify;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.container5 {
+    display: flex; /* Aplica un diseño flexible */
+    margin-left: 20px;
+}
+
+.box {
+    width: 300px; 
+    padding: 20px; 
+    margin-right: 20px; 
+    background-color: #f5f5f5; 
+    border: 1px solid #2ed573; 
+    align-items: center; 
+    text-align: center; 
+}
+
+.box h3 {
+    margin-left: 20px;
+}
+
+.box img {
+    height: 150px;
+    width: auto;
+    margin-bottom: 10px; 
 }
 
 #juguetes h2 {
     text-align: center;
-    text-decoration: underline;
-    text-decoration-color: #2ed573;
     color: black;
     font-size: 30px;
     margin-top: 50px;
+    border: 5px solid #4f4aa6;
+    margin-top: 20px;
 }
 
 #realidad_virtual h2 {
     text-align: center;
-    text-decoration: underline;
-    text-decoration-color: #2ed573;
     color: black;
     font-size: 30px;
     margin-top: 50px;
+    border: 5px solid #4f4aa6;
+    margin-top: 10px;
 }
