--- a/css/beneficiosStyle.css
+++ b/css/beneficiosStyle.css
@@ -227,8 +227,6 @@ nav ul li a {
 }
 
 #realidad_virtual {
-    display: flex;
-    flex-direction: column;
     align-items: center;
     text-align: center;
 }
@@ -276,4 +274,11 @@ nav ul li a {
 #realidad_virtual iframe {
     margin-top: 20px;
 }
-  
+
+footer {
+    margin-top: 20px;
+    padding: 20px;
+    background-color: black;
+    color: white;
+    text-align: center;
+}  
