--- a/css/accionStyle.css
+++ b/css/accionStyle.css
@@ -1,9 +1,34 @@
-header {
+body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    padding: 0;
+    margin: 0;
+  }
+header {
+
     background-color: #4f4aa6;
     text-align: center;
     padding: 20px;
     color: white;
     font-size: 20px;
     letter-spacing: 3px;
+}
+nav {
+    background-color: #2ed573;
+    padding: 10px;
+    text-align: center;
+}
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+nav ul li {
+    display: inline-block;
+    margin-right: 50px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
 }
