--- a/css/accionStyle.css
+++ b/css/accionStyle.css
@@ -3,32 +3,62 @@ body {
     padding: 0;
     margin: 0;
   }
+
 header {
 
     background-color: #4f4aa6;
     text-align: center;
     padding: 20px;
     color: white;
-    font-size: 20px;
-    letter-spacing: 3px;
+    font-size: 1rem;
+    letter-spacing: 0.2rem;
 }
+
 nav {
     background-color: #2ed573;
-    padding: 10px;
+    padding: 0.75rem;
     text-align: center;
 }
+
 nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
+
 nav ul li {
     display: inline-block;
-    margin-right: 50px;
+    margin-right: 1rem;
 }
 
 nav ul li a {
     text-decoration: none;
     color: white;
-    font-size: 18px;
+    font-size: 1rem;
 }
+
+.container {
+    align-items: center;
+    justify-content: center;
+  }
+  
+  
+.container img {
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 0 10px #2ed573;
+  }
+  
+.container p {
+    margin: 1rem;
+    text-align: justify;
+    text-size-adjust: 1rem;
+  }
+
+.line {
+    border-top: 2px solid #2ed573;
+    border-bottom: 1px solid #2ed573;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+  
