--- a/css/style1.css
+++ b/css/style1.css
@@ -193,3 +193,60 @@ ul li {
 #titulo-impacto h2 span {
   display: block;
 }
+
+ /* Estilos CSS para el GIF */
+#gif-wrapper {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+#gif-wrapper img {
+    position: absolute;
+    bottom: -50px;
+    left: -50px;
+    width: 150px;
+    height: 150px;
+    animation: move 10s infinite linear;
+}
+
+@keyframes move {
+    0% {
+        transform: translateX(0);
+    }
+    50% {
+        transform: translateX(calc(100% - 200px));
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+/* Estilos CSS adicionales para el contenido */
+#futuro {
+    padding: 20px;
+    background-color: #f2f2f2;
+    text-align: justify;
+    position: relative;
+    z-index: 1;
+}
+
+#futuro h2 {
+    color: #333;
+    margin-bottom: 10px;
+}
+
+#futuro p {
+    margin-bottom: 10px;
+}
+
+#futuro ul {
+    list-style-type: disc;
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
+#futuro li {
+    margin-bottom: 5px;
+}
