--- a/css/accionStyle.css
+++ b/css/accionStyle.css
@@ -59,6 +59,110 @@ nav ul li a {
     border-top: 2px solid #2ed573;
     border-bottom: 1px solid #2ed573;
     margin-top: 10px;
+    margin-bottom: 30px;
+}
+
+#industria h2 {
+    text-align: center;
+    color: #4f4aa6;
+    font-size: 30px;
+    margin-top: 10px;
     margin-bottom: 10px;
+}
+
+#industria p {
+    margin: 1rem;
+    text-align: justify;
+    text-size-adjust: 1rem;
+    margin-bottom: 30px;
+}
+
+.container2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+.container2 h3 {
+    text-decoration: underline;
+    text-decoration-color: #2ed573;
+    
+}
+
+.container3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container3 h3 {
+    text-decoration: underline;
+    text-decoration-color: #2ed573;
+}
+
+.card {
+    width: 300px;
+    height: 275px;
+    margin: 20px;
+    box-shadow: 0 0 10px gray;
+}
+
+.card-inner {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 1s;
+}
+
+.card:hover .card-inner {
+    transform: rotateY(180deg);
+}
+
+.front,
+.back1,
+.back2,
+.back3,
+.back4 {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+}
+
+.front {
+    background-color: white;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 1rem;
+}
+
+.back1 {
+    transform: rotateY(180deg);
+    background-image: url("https://www.prensa-latina.cu/wp-content/uploads/2022/05/industria-francia.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.back2 {
+    transform: rotateY(180deg);
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/9/90/Comercio_electronico.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.back3 {
+    transform: rotateY(180deg);
+    background-image: url("https://www.lokad.com/public/Upload/Support/Glossary/supply-chain-management.png");
+    background-size: cover;
+    background-position: center;
+}
+
+.back4 {
+    transform: rotateY(180deg);
+    background-image: url("https://www.equiposytalento.com/upload/talent_noticias/003/3618/predecirfuturolaboralono.jpg");
+    background-size: cover;
+    background-position: center;
 }
   
