--- a/css/omnipresencia.css
+++ b/css/omnipresencia.css
@@ -41,9 +41,58 @@ a:hover{
 }
 
 .box_1{
-    display: flex;
+    display: contents;
 }
 
-.column{
-    border: #4f4aa6;
+.column {
+    color: white;
+    align-content: center;
+    background: url(../image/background.avif) no-repeat center;
+    background-size: cover;
+    background-attachment: fixed;
+    text-align: center;
 }
+
+.column h2{
+    text-align: center;
+}
+
+.container h2{
+    text-align: center;
+}
+
+.container h3{
+    text-align: center;
+    text-decoration: solid;
+}
+
+#Implementacion h2{
+    text-align: center;
+    text-decoration: underline #4f4aa6;
+}
+
+#Implementacion h3{
+    text-align: center;
+}
+
+.container1{
+    display: flex;
+
+}
+.box_2{
+    height: 150px; 
+    border-radius: 20px;
+    background-color:#4f4aa6 ;
+    align-items: center;
+    text-align: center;
+    margin-inline: 20px;
+    padding-top: 40px;
+}
+
+.box_2 img{
+    filter: brightness(1.1);
+    mix-blend-mode: multiply;
+}
+
+
+
