Pagina principal Informacion
En este commit se ha ampliado la informacion de la pagina principal.

--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -58,6 +58,50 @@ nav ul li a {
     font-size: 30px;
     text-align: justify; 
 }
+
+.container2 {
+    display: flex; /* Aplica un diseño flexible */
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
+.box {
+    width: 300px; 
+    padding: 20px; 
+    margin-right: 20px; 
+    background-color: #f5f5f5; 
+    border: 1px solid #2ed573; 
+    align-items: center; 
+    text-align: center; 
+}
+
+.box h3 {
+    margin-left: 20px;
+}
+
+.box img {
+    height: 150px;
+    width: auto;
+    margin-bottom: 10px; 
+}
+
+.box p {
+    text-align: justify;
+}
+
+.box .more-info-btn {
+    background-color: #4f4aa6;
+    color: white;
+    border: none; /* Sin borde */
+    padding: 10px 20px; /* Espaciado interno */
+    text-align: center; /* Alinear texto al centro */
+    text-decoration: none; /* Sin subrayado */
+    display: inline-block; /* Mostrar como bloque en línea */
+    font-size: 16px; /* Tamaño de fuente */
+    margin: 4px 2px; /* Márgenes */
+    cursor: pointer; /* Cambiar cursor al pasar sobre el botón */
+    border-radius: 4px; /* Radio de borde */
+}
   
 footer {
     margin-top: 20px;
