--- a/css/accionStyle.css
+++ b/css/accionStyle.css
@@ -1,22 +1,23 @@
 body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: Consolas, monaco, monospace;
     padding: 0;
     margin: 0;
-  }
+    background-color: #ffffff; /* Blanco */
+    color: #333333; 
+}
 
 header {
-
     background-color: #4f4aa6;
     text-align: center;
     padding: 20px;
-    color: white;
-    font-size: 1rem;
+    color: aliceblue;
+    font-size: 20px;    
     letter-spacing: 0.2rem;
 }
 
 nav {
     background-color: #2ed573;
-    padding: 0.75rem;
+    padding: 10px;
     text-align: center;
 }
 
@@ -28,53 +29,53 @@ nav ul {
 
 nav ul li {
     display: inline-block;
-    margin-right: 1rem;
+    margin-right: 50px;
 }
 
 nav ul li a {
     text-decoration: none;
     color: white;
-    font-size: 1rem;
+    font-size: 18px;
 }
 
 .container {
     align-items: center;
     justify-content: center;
+    display: flex;
   }
   
   
 .container img {
     width: 100%;
-    height: 100%;
+    height: auto;
     box-shadow: 0 0 10px #2ed573;
   }
   
 .container p {
-    margin: 1rem;
+    margin-left: 30px;
+    margin-right: 30px;
     text-align: justify;
-    text-size-adjust: 1rem;
+    color: #666;
+    font-size: 18px;
   }
 
 .line {
-    border-top: 2px solid #2ed573;
-    border-bottom: 1px solid #2ed573;
-    margin-top: 10px;
-    margin-bottom: 30px;
+    flex: 1;
 }
 
 #industria h2 {
     text-align: center;
-    color: #4f4aa6;
+    color: black;
     font-size: 30px;
+    border: 5px solid #4f4aa6;
     margin-top: 10px;
-    margin-bottom: 10px;
 }
 
 #industria p {
     margin: 1rem;
     text-align: justify;
     text-size-adjust: 1rem;
-    margin-bottom: 30px;
+    margin-bottom: 5px;
 }
 
 .container2 {
@@ -86,18 +87,8 @@ nav ul li a {
 .container2 h3 {
     text-decoration: underline;
     text-decoration-color: #2ed573;
-    
-}
-
-.container3 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.container3 h3 {
-    text-decoration: underline;
-    text-decoration-color: #2ed573;
+    font-size: 18px;
+    text-decoration-thickness: 2px;
 }
 
 .card {
@@ -132,10 +123,11 @@ nav ul li a {
 
 .front {
     background-color: white;
+    border: #4f4aa6;
     align-items: center;
     justify-content: center;
     text-align: center;
-    font-size: 1rem;
+    font-size: 14px;
 }
 
 .back1 {
@@ -165,4 +157,56 @@ nav ul li a {
     background-size: cover;
     background-position: center;
 }
-  
+
+#medicina {
+    align-items: center;
+    text-align: center;
+}
+
+#medicina h2 {
+    text-align: center;
+    color: black;
+    font-size: 30px;
+    margin-top: 50px;
+    border: 5px solid #4f4aa6;
+    margin-top: 10px;
+}
+
+#medicina p {
+    text-align: justify;
+    align-items: center;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.container3 {
+    display: flex; /* Aplica un diseño flexible */
+    margin-left: 20px;
+    justify-content: center;
+}
+
+.box {
+    width: 300px; 
+    padding: 20px; 
+    margin-right: 20px; 
+    background-color: #f5f5f5; 
+    border: 1px solid #2ed573; 
+    align-items: center; 
+    text-align: center; 
+}
+
+.box h3 {
+    margin-left: 20px;
+}
+
+#medicina iframe {
+    margin-top: 20px;
+}
+
+footer {
+    margin-top: 20px;
+    padding: 20px;
+    background-color: black;
+    color: white;
+    text-align: center;
+}  
