--- a/css/beneficiosStyle.css
+++ b/css/beneficiosStyle.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Consolas, monaco, monospace;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #ffffff; /* Blanco */
