--- a/css/style1.css
+++ b/css/style1.css
@@ -286,3 +286,40 @@ ul li {
     height: 100%;
     object-fit: cover;
     object-position: center
+}
+
+#robot-hand {
+  width: 400px;
+  height: 400px;
+  background-image: url('../image/manorobot.png');
+  background-size: cover;
+}
+
+#greeting {
+      text-align: center;
+      font-family: 'Press Start 2P', Arial, sans-serif;
+      font-size: 25px;
+      color: purple;
+      text-shadow: 2px 2px 0px lime;
+      vertical-align: super;
+      position: relative;
+      top: -220px;
+      left: 20px;
+    }
+
+#body1 {
+      background: #f1f1f1 url('../image/fondo5.jpg') center/cover;
+  }
+
+#greeting2 {
+      text-align: center;
+      font-family: 'Press Start 2P', Arial, sans-serif;
+      font-size: 12px;
+      color: purple;
+      text-shadow: 2px 2px 0px lime;
+      vertical-align: super;
+      position: relative;
+      top: -220px;
+      left: 20px;
+    }
+
