--- a/css/beneficiosStyle.css
+++ b/css/beneficiosStyle.css
@@ -282,3 +282,31 @@ footer {
     color: white;
     text-align: center;
 }  
+
+#boton-subir {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    background-color: #ffffff;
+    border: none;
+    border-radius: 50%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#boton-subir:hover {
+    transform: scale(1.1);
+}
+
+#boton-subir img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
