--- a/css/beneficiosStyle.css
+++ b/css/beneficiosStyle.css
@@ -310,3 +310,31 @@ footer {
     object-fit: cover;
     border-radius: 50%;
 }
+#boton2 {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  /* Opcionalmente, puedes usar "left" en lugar de "right" para posicionar el botón en la esquina superior izquierda */
+  width: 80px;
+  height: 80px;
+  background-color: #ffffff;
+  border: none;
+  border-radius: 50%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#boton2:hover {
+  transform: scale(1.1);
+}
+
+#boton2 img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
