--- a/css/omnipresencia.css
+++ b/css/omnipresencia.css
@@ -13,9 +13,9 @@ body{
 }
 
 nav {
-    background-color: #2ed573;
-    text-align: center;
+    background-color: #2ed573; /* Verde */
     padding: 10px;
+    text-align: center;
 }
 
 nav ul {
@@ -26,52 +26,63 @@ nav ul {
 
 nav ul li {
     display: inline-block;
-    margin-inline: 10px;
+    margin-right: 50px;
 }
 
 nav ul li a {
     text-decoration: none;
-    color: white;
+    color: #ffffff; /* Texto en blanco */
+    font-size: 18px;
 }
 
-a:hover{
-    color: black;
-    background-color: aqua;
-}
-
-.box_1{
-    display: contents;
-}
-
+.container {
+    display: flex;
+  }
+  
 .column {
-    color: white;
-    align-content: center;
-    background: url(../image/background.avif) no-repeat center;
-    background-size: cover;
-    background-attachment: fixed;
-    text-align: center;
+    flex: 1; /*Indica que debe ocupar todo el espacio*/
+}
+  
+.column img {
+    width: 100%;
+    height: auto;
+}
+  
+.column h2 {
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 100px;
+    color: #333;
+    font-size: 30px;
+    text-align: justify; 
 }
 
-.column h2{
-    text-align: center;
-}
-
-.container h2{
-    text-align: center;
-}
-
-.container h3{
-    text-align: center;
-    text-decoration: solid;
+.column p {
+    text-align: justify;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 #Implementacion h2{
     text-align: center;
-    text-decoration: underline #4f4aa6;
+    color: black;
+    font-size: 30px;
+    margin-top: 50px;
+    border: 5px solid #4f4aa6;
+    margin-top: 10px;
+}
+
+#Implementacion p{
+    text-align: justify;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 #Implementacion h3{
     text-align: center;
+    text-decoration: underline;
+    text-decoration-color: #2ed573;
+    text-decoration-thickness: 2px;
 }
 
 .container1{
@@ -81,21 +92,40 @@ a:hover{
 .box_2{
     height: auto; 
     border-radius: 20px;
-    background-color:#4f4aa6 ;
+    border: 1px solid #4f4aa6;
     align-items: center;
     text-align: center;
-    margin-inline: 20px;
+    margin-inline: 15px;
     padding-top: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
+    position: relative;
 }
 
 .box_2 img{
+    position: relative;
     filter: brightness(1.1);
     mix-blend-mode: multiply;
+    width: 275px;
+    height: auto;
+    margin-left: 10px;
+    margin-right: 10px;
+    align-items: center;
 }
 
 #Efectos h2{
     text-align: center;
-    text-decoration: underline;
+    color: black;
+    font-size: 30px;
+    margin-top: 50px;
+    border: 5px solid #4f4aa6;
+    margin-top: 10px;
+}
+
+#Efectos p {
+    text-align: justify;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .Container2{
@@ -105,9 +135,13 @@ a:hover{
 .box_3{
     height: auto; 
     border-radius: 20px;
-    background-color:white ;
+    border: 1px solid #2ed573;
     align-items: center;
     text-align: center;
+    padding-top: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
+    position: relative;
     margin-inline: 20px;
     padding-top: 40px;
 }
@@ -188,12 +222,10 @@ a:hover{
 }
 
 .text1 h2{
-    text-decoration: underline #4f4aa6;
     text-align: center;
 }
 
 .text2 h2{
-    text-decoration: underline #4f4aa6;
     text-align: center;
 
 }
@@ -206,7 +238,6 @@ a:hover{
     padding: 20px;
     max-width: 100%;
     height: auto;
-    margin-top: 20px;
 }
 
 .container4{
@@ -241,3 +272,10 @@ a:hover{
   object-fit: cover;
   border-radius: 50%;
 }
+
+footer {
+    padding: 20px;
+    background-color: black;
+    color: white;
+    text-align: center;
+}  
