Cambio pie de pagina
Se cambio el pie de pagina de la pagina impacto se le aplico un color negro

--- a/css/style1.css
+++ b/css/style1.css
@@ -58,7 +58,7 @@ p {
 }
 
 footer {
-    background-color: #8a4dff; /* Lila */
+    background-color: #000000; /* Lila */
     padding: 10px;
     text-align: center;
     font-size: 14px;
